--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,18 +27,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m pip install requirements.txt
+        python -m pip install autopep8 flake8
+        python -m pip freeze -> requirements.txt
     - name: Format with autopep8
       run: |
-        autopep8 -i main.py
-        autopep8 -i test_prime.py
+        python -m autopep8 -i *.py
     - name: Test with pytest
       run: |
         pytest
+    - uses: stefanzweifel/git-auto-commit-action@v3.0.0
+      with:
+        commit_message: Apply Code Formatter Change
+        ref: ${{ github.head_ref }}
