--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install requirements.txt
+        python -m pip install -r requirements.txt
         python -m pip install autopep8 flake8
         python -m pip freeze -> requirements.txt
     - name: Format with autopep8
