--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,10 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8"]
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.head_ref }}
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
@@ -36,6 +38,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    - uses: stefanzweifel/git-auto-commit-action@v3.0.0
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: Apply Code Formatter Change
+        commit_message: git-auto-commit-action
