--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python package
 
 on:
@@ -19,18 +16,23 @@ jobs:
         python-version: ["3.8"]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: pytest
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
-
-    - name: Test with pytest
-      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
+        autopep8 -i *.py
         pytest
+
+    - name: git-auto-commit-action
+      uses: stefanzweifel/git-auto-commit-action@v3.0.0
+      with:
+        commit_message: Apply Code Formatter Change
+        ref: ${{ github.head_ref }}
