--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,10 +16,13 @@ jobs:
     steps:
     # - name: Checkout
     #   uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: pytest
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
