--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,13 +14,13 @@ jobs:
       matrix:
         python-version: ["3.8"]
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/checkout@v3
-      uses: actions/setup-python@v4
+    - uses: actions/checkout@v3
+
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: pytest
-      run: |
+
+    - run: |
         pip install --upgrade pip
         pip install -r requirements.txt
         autopep8 -i *.py
