--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,27 +1,22 @@
 name: Python package
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9", "3.10", ]
     steps:
     - uses: actions/checkout@v3
-
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-
     - run: |
         pip install --upgrade pip
         pip install -r requirements.txt
-        autopep8 -i *.py
         pytest
